<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Title Strings -->
    <string name="app_name">EasySplit</string>
    <string name="hello_world">hello world</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_view_event">View Event</string>
    <string name="title_activity_new_expense">New Expense</string>
    <string name="title_activity_view_expense">View Expense</string>
    <string name="title_activity_edit_expense">Edit Expense</string>
    <string name="title_activity_settle_participants">Settle Participants</string>	

    <!-- General Strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

    <!-- Navigation Strings -->
    <string name="action_new">Add New Event</string>
    <string name="accountInfo">View Account</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>

    <!-- New Event Strings -->
    <string name="eventName">Event Name:</string>
    <string name="eventString">Enter an event name</string>
    <string name="budget">Budget: $</string>
    <string name="addPart">Add Participants: </string>
    <string name="findPart">Add Participants</string>
    <string name="notify">Notify?</string>
    <string name="enterName">Enter name</string>
    <string name="enterEmail">Enter email</string>
    <string name="accept">Save</string>

    <!-- View Event Details Strings -->
    <string name="dateCreated">Date Created: </string>
    <string name="participants">Participants: </string>
    <string name="hostName">Event Name: </string>
    <string name="settleParticipants">Settle Participants</string>
    <string name="totalAmount">Total Expense: $</string>

    <!-- ListView Strings -->
    <string name="eventNameLV">Event Name</string>
    <string name="statusLV">Status</string>
    <string name="amountLV">Amount</string>
    <string name="addNewExp">Add New Expense</string>
    <string name="expenseNameLV">Expense Name</string>

    <!-- New Expense Strings -->
    <string name="enterExpense">Enter an Expense Name</string>
    <string name="payer">Expense Payer: </string>
    <string name="amount">Total Amount:   $</string>
    <string name="place">Place of Purchase: </string>
    <string name="selectPart">Select Participants</string>
    <string name="split">Save &amp; Split</string>
    <string name="photoPreview">Photo Preview</string>
    <string name="takePhoto">Take Photo</string>

    <!-- View Expense Strings -->
    <string name="deleteExpense">Delete Expense</string>
    <string name="editExpense">Edit Expense</string>

    <!-- Register Account Strings -->
    <string name="RAName">Name: </string>
    <string name="RAEmail">Email: </string>
    <string name="RAPassword">Password: </string>
    <string name="RARegister">Register</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_account">Register Account</string>
    <string name="title_activity_account_info">Account Information</string>
    <string name="title_activity_user_login">Login</string>
    <string name="logintext">Enter login credentials below:</string>
    <string name="notepref">Notification Preference:</string>
    <string name="accreationdate">Account Creation Date:</string>

    <string name="sendSummary">Send Summary</string>
    <string name="title_activity_user_manual">User Manual</string>
</resources>
