<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.easysplit.MainActivity" >

      <item android:id="@+id/action_home"
          android:orderInCategory="100"
          android:showAsAction="never"
          android:title="@string/home"/>
    
    <item android:id="@+id/action_addNewEvent"
          android:icon="@drawable/ic_action_new"
          android:orderInCategory="100"
          android:showAsAction="always"
          android:title="@string/action_new"/>

        <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:orderInCategory="100"
          android:showAsAction="always"
          android:title="Refresh"/>
    
     <item android:id="@+id/action_accountInfo"
          android:orderInCategory="200"
          android:showAsAction="never"
          android:title="@string/accountInfo"/>
     
       <item android:id="@+id/action_logout"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="@string/logout"/>
       
       <!-- Testing purposes - delete all after -->
       <item android:id="@+id/action_editExpense1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="editexpense"/>
       
       <item android:id="@+id/action_newexpense1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="newexpense"/>
       
       <item android:id="@+id/action_registeraccount1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="registeraccount"/>
       
       <item android:id="@+id/action_login1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="login"/>
       
       <item android:id="@+id/viewevent1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="viewevent"/>
       
        <item android:id="@+id/viewexpense1"
          android:orderInCategory="300"
          android:showAsAction="never"
          android:title="viewexpense"/>
    
    
</menu>
