<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:background="#FFFFFF"
   android:padding="15dp">
            
    <LinearLayout android:id="@+id/llNEListview"
       android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="2dip">

        <EditText
            android:id="@+id/etNELVAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterName"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etNELVEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        
   
    </LinearLayout>

        <ImageButton
            android:id="@+id/btnNELVRemoveEntry"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_action_cancel" />

        <TextView
            android:id="@+id/txtNELVRecNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/llNEListview"
            android:layout_alignParentRight="true"
            android:text="@string/notify" />

        <CheckBox
            android:id="@+id/cbNELVRecNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtNELVRecNotification"
            android:layout_below="@+id/btnNELVRemoveEntry"
            android:gravity="center_vertical"
            android:scrollHorizontally="false" />

</RelativeLayout >
