<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:paddingTop="25dp"
    android:rowCount="8"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:layout_row="0"
        android:hint="@string/eventString" />

    <View
        android:id="@+id/view1"
        android:layout_height="20dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="1" />

    <TextView
        android:id="@+id/txtBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginLeft="25dip"
        android:layout_row="2"
        android:text="@string/budget"
        android:textSize="@dimen/formSize" />

    <EditText
        android:id="@+id/etBudget"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_marginLeft="5dip"
        android:layout_row="2"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/txtParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dip"
        android:layout_row="3"
        android:text="@string/addPart"
        android:textSize="@dimen/formSize" />
    
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_column="1"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="20dp"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:text="@string/findPart"
        android:textSize="@dimen/buttonTextSize" />
    
     <View
        android:id="@+id/view2"
        android:layout_height="20dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="4" />
    
     <ListView
         android:id="@+id/listView1"
         android:layout_width="wrap_content"
         android:layout_height="280dp"
         android:layout_column="0"
         android:layout_columnSpan="2"
         android:layout_marginLeft="5dip"
         android:layout_row="5" >
        </ListView>
        

      <Button
            android:id="@+id/btnSave"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:text="@string/save"
            android:layout_gravity="right"
            android:layout_row="6"
            android:layout_column="1"
            android:textSize="12sp" />
