<?xml version="1.0" encoding="utf-8"?><RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="wrap_content"
   android:background="#FFFFFF"
   android:padding="15dp">
   
    <LinearLayout 
       android:id="@+id/llEELVD1"
       android:orientation="vertical"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:paddingLeft="10dip"
       android:paddingRight="10dip">
       
        <TextView
         android:id="@+id/txtEELVDEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textSize="@dimen/listViewSize"
		 android:text="@string/expenseNameLV" 
         />
        
        <TextView
         android:id="@+id/txtEELVDStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/formSize"
         android:textColor="#000000"
         android:text="@string/statusLV" 
         />
    </LinearLayout>
    
    <TextView
         android:id="@+id/txtEELVDamount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/listViewSize"
         android:textColor="#000000"
         android:layout_alignParentRight="true"
		 android:layout_centerVertical="true"
         android:text="@string/amountLV" 
         />

</RelativeLayout >
