<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:padding="15dp"
 android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:id="@+id/llELVD1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:id="@+id/txtELVDEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eventNameLV"
            style="@style/MyUserManual"
            android:textStyle="normal"
			/>

        <TextView
            android:id="@+id/txtELVDStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusLV"
            style="@style/MyUserManual"
            android:textStyle="normal"
	    android:textSize="@dimen/formSize"
             />
    </LinearLayout>

    <TextView
        android:id="@+id/txtELVDAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/amountLV"
		style="@style/MyUserManual"
        android:textStyle="normal"
        />

</RelativeLayout>