<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEExPayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/payer"
            android:layout_gravity="center"
            android:textSize="@dimen/formSize" />

        <TextView
            android:id="@+id/txtEExDisplayPayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="null"
            android:layout_gravity="center"
            android:textSize="@dimen/formSize" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEExAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/amount"
            android:textSize="@dimen/formSize" />

        <EditText
            android:id="@+id/etEExAmount"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:textSize="@dimen/formSize"
            android:inputType="numberDecimal" >
        
        <requestFocus />        
       </EditText>
    </LinearLayout>
    
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginTop="10dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/txtEExPlace"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="25dip"
              android:text="@string/place"
              android:textSize="@dimen/formSize" />

          <EditText
              android:id="@+id/etEExPlace"
              android:layout_width="184dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dip"
              android:inputType="text" >
               <requestFocus />        
       </EditText>
      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEExParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="20dp"
            android:text="@string/participants"            
            android:textSize="@dimen/formSize" />

        <Button
            android:id="@+id/btnEExselectPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="20dp"
            android:text="@string/selectPart"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvEExSelectParticipants"
        android:layout_width="wrap_content"
        android:layout_height="196dp"
        android:layout_marginLeft="5dip" >

    </ListView>

    <Button
        android:id="@+id/btnEExSave"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/save"
        android:textSize="@dimen/buttonTextSize" />

</LinearLayout>