<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llEDDateCreated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"
        android:layout_weight="2.41"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEDDateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/dateCreated"
            android:textSize="@dimen/formSize" />

        <TextView
            android:id="@+id/txtEDDisplayDateCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="null"
            android:textSize="@dimen/formSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEDHostName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.92"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEDHostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/hostName"
            android:textSize="@dimen/formSize" />

        <TextView
            android:id="@+id/txtEDDisplayHostName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="null"
            android:textSize="@dimen/formSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEDBudget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.13"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEDBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/budget"
            android:textSize="@dimen/formSize" />

        <TextView
            android:id="@+id/txtEDDisplayBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="null"
            android:textSize="@dimen/formSize" />
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/llEDTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3.13"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEDTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/totalAmount"
            android:textSize="@dimen/formSize" />

        <TextView
            android:id="@+id/txtEDDisplayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:text="null"
            android:textSize="@dimen/formSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEDParticipants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtEDParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/participants"
            android:textSize="@dimen/formSize" />

        <Button
            android:id="@+id/btnEDSettleParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dip"
            android:text="@string/settleParticipants"
            android:textSize="@dimen/formSize"
            android:visibility="gone" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvEDPartDetails"
        android:layout_width="wrap_content"
        android:layout_height="204dp"
        android:layout_marginLeft="30dip" >

    </ListView>

</LinearLayout>