<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etNExEventName"
        android:layout_width="225dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="text" 
        android:hint="@string/enterExpense" >
        
        <requestFocus />        
       </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtNExPayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/payer"
            android:layout_gravity="center"
            android:textSize="@dimen/formSize" />

        <Spinner
            android:id="@+id/spNExPayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtNExAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/amount"
            android:textSize="@dimen/formSize" />

        <EditText
            android:id="@+id/etNExAmount"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:textSize="@dimen/formSize"
            android:inputType="numberDecimal" >
            
            <requestFocus />        
       </EditText>
    </LinearLayout>
    
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="35dp"
          android:layout_marginTop="10dp"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/txtNExPlace"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="25dip"
              android:text="@string/place"
              android:textSize="@dimen/formSize" />

          <EditText
              android:id="@+id/etNExPlace"
              android:layout_width="184dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dip"
              android:inputType="text" >
          
          <requestFocus />        
       </EditText>
      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtNExParticipants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="20dp"
            android:text="@string/participants"            
            android:textSize="@dimen/formSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:orientation="horizontal" >
        
    <ListView
        android:id="@+id/lvNExSelectParticipants"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dip" >

    </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="77dp"
            android:layout_height="67dp"
            android:src="@drawable/ic_action_new_dark" />

        <Button
            android:id="@+id/btnNExPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Take Photo"  
            android:onClick="btnNexPhoto"/>

        <Button
            android:id="@+id/btnNExSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/split"
            android:textSize="@dimen/buttonTextSize"
            android:onClick="btnNExSplitSave"/>

    </LinearLayout>

</LinearLayout>
