<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.35"
        android:orientation="horizontal" >
        </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:layout_weight="0.21"
         android:orientation="horizontal" >
     
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0.35"
         android:layout_marginLeft="25dip"
         android:text="@string/logintext" 
         android:textSize="@dimen/formSize"
         />
</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="0.35"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtULEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:text="@string/RAEmail"
            android:textSize="@dimen/formSize" />

        <EditText
            android:id="@+id/etULEmail"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/formSize" 
            android:text="" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_weight="0.35"
          android:orientation="horizontal" >

          <TextView
              android:id="@+id/txtULPassword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="25dip"
              android:text="@string/RAPassword"
              android:textSize="@dimen/formSize" />

          <EditText
              android:id="@+id/etULPassword"
              android:layout_width="184dp"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dip"
              android:inputType="textPassword"
              android:text="" >
               <requestFocus />        
       </EditText>
      </LinearLayout>

      <LinearLayout
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="100dp"
          android:layout_weight="0.80"
          android:orientation="horizontal"    
          android:layout_gravity="center"     
          >

          <Button
              android:id="@+id/btnULLogin"
              android:layout_width="100dp"
              android:layout_height="40dp"
              android:layout_marginLeft="50dp"
              android:text="@string/title_activity_user_login" />

 

</LinearLayout>
</LinearLayout>